move all dsl to the dsl package

--- a/docs/stylesheets/codehilite.css
+++ b/docs/stylesheets/codehilite.css
@@ -1,3 +1,4 @@
 :root > * {
-    --md-code-hl-string-color: #0FF1CE;
+    --md-code-hl-comment-color: #777777;
+    --md-code-hl-punctuation-color: #777777;
 }
