--- a/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-view/components/index.html
+++ b/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-view/components/index.html
@@ -282,6 +282,7 @@
                 <p><a href="../../../">KECS</a> / <a href="../../">com.juanmedina.kecs.entity</a> / <a href="../">View</a> / <a href="./">components</a></p>
 <h1 id="components">components<a class="headerlink" href="#components" title="Permanent link">&para;</a></h1>
 <p><code>fun &lt;reified T :</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><code>Any</code></a><code>&gt; components():</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><code>List</code></a><code>&lt;T&gt;</code></p>
+<p>Return the components in our view for a giving class.</p>
                 
               
               
