--- a/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-entity/components/index.html
+++ b/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-entity/components/index.html
@@ -282,6 +282,8 @@
                 <p><a href="../../../">KECS</a> / <a href="../../">com.juanmedina.kecs.entity</a> / <a href="../">Entity</a> / <a href="./">components</a></p>
 <h1 id="components">components<a class="headerlink" href="#components" title="Permanent link">&para;</a></h1>
 <p><code>val components:</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-hash-map/index.html"><code>HashMap</code></a><code>&lt;</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.reflect/-k-class/index.html"><code>KClass</code></a><code>&lt;*&gt;,</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><code>Any</code></a><code>&gt;</code></p>
+<p>The components that this entity has</p>
+<p>We could have only one component per given type.</p>
                 
               
               
