--- a/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-view/component/index.html
+++ b/docs/packages/-k-e-c-s/com.juanmedina.kecs.entity/-view/component/index.html
@@ -282,7 +282,8 @@
                 <p><a href="../../../">KECS</a> / <a href="../../">com.juanmedina.kecs.entity</a> / <a href="../">View</a> / <a href="./">component</a></p>
 <h1 id="component">component<a class="headerlink" href="#component" title="Permanent link">&para;</a></h1>
 <p><code>fun &lt;reified T :</code><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html"><code>Any</code></a><code>&gt; component(): T</code></p>
-<p>Return a single component from a single <a href="../../-entity/">Entity</a> that has a component of the giving type, or throws exception if there is more than one.</p>
+<p>Return a single component from a single <a href="../../-entity/">Entity</a> that has a component of
+the giving type, or throws exception if there is more than one.</p>
                 
               
               
